<resources>
    <string name="app_name">FFVL Tracker</string>
    <string name="enter_ffvl_tracker_key">Enter FFVL Tracker Key</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="select_frequency">Upload frequency</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="log_messages_will_appear_here">Log messages will appear here</string>
    <string name="tracker_has_started">Tracker has started</string>
    <string name="tracker_has_stopped">Tracker has stopped</string>
    <string name="scan_qr_code">QR Scan</string>
    <string name="scan_cancelled">QR Scan Cancelled</string>
    <string name="scan_failed">QR Scan Failed</string>
    <string name="save">Save</string>
    <string name="ffvl_key_missing">FFVL Key missing</string>
    <string name="key_saved">Key Saved</string>
    <string name="frequencyChanged">Frequency changed to:</string>
    <string name="seconds">seconds</string>
    <string name="category_name">Category name</string>
    <string name="categoryNameChanged">"Category changed to:"</string>
    <string name="select_category">Select category</string>
    <string name="position_uploaded">position uploaded</string>
    <string name="errorFFVLAPI">Error FFVL API</string>
    <string name="tryAgainInAMoment">Try again in a moment</string>
</resources>